--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Open+Sans&display=swap');
+
+
+/* Variables */
+
+:root {
+  --font-text: 'Open Sans', sans-serif;
+  --font-heading: 'Luckiest Guy', cursive;
+  --color-dk-cyan: hsl(191, 85%, 31%);
+  --color-deep-sky-aqua: hsl(191, 100%, 40%);
+  --color-md-steel-blue: hsl(211, 47%, 29%);
+  --color-deep-navy-blue: hsl(220, 60%, 20%);
+  --color-aqua: hsl(176.82, 93.41%, 64.31%);
+  --color-matte-gold: hsl(36, 36%, 62%);
+  --color-very-lt-gray: hsl(0, 0%, 93%);
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  outline: 1px solid black;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  background-color: var(--color-very-lt-gray);
+}
+
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
