--- a/src/App.css
+++ b/src/App.css
@@ -11,4 +11,14 @@
   height: 80%;
 }
 
+.drum {
+  width: 400px;
+  height: 600px;
+  padding: 15px;
+  background-color: var(--color-dk-cyan);
+  margin: 0 auto;
+  margin-top: 30px;
+  border-radius: 8px;
+
+}
 
