--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,27 @@
 
 }
 
+.drumDisplay {
+  background-color: var(--color-deep-navy-blue);
+  color: var(--color-matte-gold);
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 20px 15px;
+  text-align: center;
+  border-radius: 6px;
+  margin-top: 30px;
+  border: 1px solid #000000;
+}
+
+.drum-pad {
+  position: relative;
+  float: left;
+  width: 100px;
+  height: 80px;
+  margin-right: 10px;
+  border-radius: 5px;
+  padding-top: 35px;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
