--- a/src/components/styles/Display.css
+++ b/src/components/styles/Display.css
@@ -1,4 +1,4 @@
-.drumDisplay {
+.drum-display {
     background-color: var(--color-deep-navy-blue);
     color: var(--color-matte-gold);
     text-transform: uppercase;
