--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,8 +1,16 @@
 footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
     height: 100px;
 
 }
 
 .footer-container {
-    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    
 }
