--- a/src/App.css
+++ b/src/App.css
@@ -21,9 +21,9 @@
   width: 400px;
   height: 600px;
   padding: 15px;
-  background-color: var(--color-dk-cyan);
+  background-color: var(--color-deep-navy-blue); 
   margin: 0 auto;
-  margin-top: 30px;
+  bottom: 50px;
   /*border-radius: 8px;*/
   outline: 5px solid var(--color-deep-navy-blue);
 
