--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -1,10 +1,21 @@
+.header-container {
+    display: flex;
+    justify-content: center;
+}
+
+
 .jumbotron {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 50px;
+    padding: 20px;
     text-align: center;
-    
+}
+
+h1 {
+    font-family: var(--font-heading);
+    padding: 20px;
 }
 
 @media screen and (max-width: 850px) {
