--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -4,7 +4,11 @@ footer {
     width: 100%;
     height: 100px;
     margin-top: 50px;
+}
 
+footer p {
+    font-family: var(--font-text);
+    color: var(--color-deep-navy-blue);
 }
 
 .footer-container {
