--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
   font-weight: 700;
   padding: 20px 0px;
   text-align: center;
-  border-radius: 6px;
+  /*border-radius: 6px;*/
   margin-top: 30px;
   border: 1px solid #000000;
 }
@@ -52,11 +52,7 @@
 }
 
 .control-container {
-  width: 240px;
-  height: 100px * 3 + 32;
-  display: inline-block;
-  margin: 40px 20px 0 10px;
-  vertical-align: top;
+  
 }
 
 .control {
@@ -65,14 +61,10 @@
 }
 
 p {
+  font-family: var(--font-text);
+  color: var(--color-very-lt-gray);
   margin-bottom: 0;
-}
-
-.select {
-  @extend .outer-select;
-}
-.inner {
-  @extend .inner-select;
+  text-align: center !important;
 }
 
 .select {
