--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,7 @@
   height: 600px;
   padding: 15px;
   background-color: var(--color-deep-navy-blue); 
-  margin: 0 auto;
-  bottom: 50px;
+  margin: 48px auto;
   /*border-radius: 8px;*/
   outline: 5px solid var(--color-deep-navy-blue);
 
@@ -83,4 +82,15 @@ p {
   border: 1px solid black;
   box-sizing: border-box;
   cursor: pointer;
+}
+
+.volume-slider {
+  background: black;
+  margin: 10px 0;
+
+}
+
+input {
+  width: 240px;
+  margin: 5px 0;
 }
