--- a/src/components/styles/DrumMachine.css
+++ b/src/components/styles/DrumMachine.css
@@ -3,9 +3,7 @@
     height: 600px;
     padding: 15px;
     background-color: var(--color-dk-cyan);
-    margin: 0 auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin: 20px 0;
     border-radius: 8px;
 
 }
