--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,14 +1,15 @@
 footer {
+    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     height: 100px;
-    margin-top: 50px;
 }
 
 footer p {
     font-family: var(--font-text);
     color: var(--color-deep-navy-blue);
+    
 }
 
 .footer-container {
@@ -16,5 +17,6 @@ footer p {
     justify-content: center;
     align-items: center;
     width: 100%;
+    
     
 }
