--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -17,6 +17,11 @@ footer p {
     justify-content: center;
     align-items: center;
     width: 100%;
-    
-    
+       
+}
+
+@media screen and (max-width: 576px){
+    p {
+        font-size: 12px;
+    }
 }
