--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -1,8 +1,3 @@
- .header-container {
-    display: flex;
-    justify-content: center;
-} 
-
 
 .jumbotron {
     display: flex;
@@ -17,8 +12,12 @@ h1 {
     padding: 20px;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 576px) {
     .jumbotron {
         text-align: center;
     }
+    .jumbotron .header-title  {
+        font-size: 34px;
+    }
+
 }
