--- a/src/App.css
+++ b/src/App.css
@@ -37,14 +37,10 @@
   font-weight: 700;
   padding: 30px 5px;
   text-align: center;
-  margin: 20px 0;
+  margin: 30px 0;
   border: 1px solid #000000;
 }
 
- h1  {
-  vertical-align: middle;
-  padding: 10px 5px 20px;
-}
 
 .pad-bank {
  display: inline-block;
@@ -58,9 +54,9 @@
   width: 100px;
   margin: auto;
 }
-
-p {
+p   {
   font-family: var(--font-text);
+  font-size: 20px;
   color: var(--color-very-lt-gray);
   margin-bottom: 0;
   text-align: center !important;
@@ -98,5 +94,11 @@ input {
 @media (min-width: 576px) {
   .drum {
     max-width: 385px;
+  }
+  .drum-machine p {
+    font-size: 20px;
+  }
+  .drum-display {
+    font-size: 28px;
   }
 }
