--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -4,11 +4,13 @@
     justify-content: center;
     align-items: center;
     height: 100px;
+    margin-bottom: 20px;
     text-align: center;
 }
 
 h1 {
     font-family: var(--font-heading);
+    font-size: 46px;
     padding: 20px;
 }
 
