--- a/src/components/styles/DrumPad.css
+++ b/src/components/styles/DrumPad.css
@@ -1,5 +1,6 @@
 .drum-pad {
     display: flex;
+    display: -webkit-flex;
     justify-content: center;
     position: relative;
     float: right;
